src-tauri/output_app_update_5.txt
    Checking ark-server-manager v2.0.0 (P:\ark\ark-server-manager\src-tauri)
warning: unused import: `ServerType`
 --> src\commands\mods.rs:1:30
  |
1 | use crate::models::{ModInfo, ServerType};
  |                              ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::path::PathBuf`
 --> src\services\app_updater.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `Cursor`
 --> src\services\file_manager.rs:3:21
  |
3 | use std::io::{self, Cursor, Read, Write};
  |                     ^^^^^^

warning: unused import: `PathBuf`
 --> src\services\file_manager.rs:4:23
  |
4 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: unused import: `std::time::Duration`
 --> src\services\rcon_client.rs:2:5
  |
2 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused variable: `server_type_str`
  --> src\commands\mods.rs:33:24
   |
33 |     let (install_path, server_type_str) = {
   |                        ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_server_type_str`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `active_mods_found` is never read
  --> src\commands\mods.rs:92:21
   |
92 |                     active_mods_found = true;
   |                     ^^^^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: variable `active_mods_found` is assigned to, but never used
   --> src\commands\mods.rs:273:14
    |
273 |      let mut active_mods_found = false;
    |              ^^^^^^^^^^^^^^^^^
    |
    = note: consider using `_active_mods_found` instead

warning: value assigned to `active_mods_found` is never read
   --> src\commands\mods.rs:286:14
    |
286 |              active_mods_found = true;
    |              ^^^^^^^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

error[E0597]: `db` does not live long enough
  --> src\services\server_monitor.rs:51:47
   |
50 |                             let db = state.db.lock().unwrap();
   |                                 -- binding `db` declared here
51 |                             if let Ok(conn) = db.get_connection() {
   |                                               ^^-----------------
   |                                               |
   |                                               borrowed value does not live long enough
   |                                               a temporary with access to the borrow is created here ...
...
54 |                         }
   |                         - `db` dropped here while still borrowed
55 |                     }
   |                     - ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `Result<std::sync::MutexGuard<'_, rusqlite::Connection>, std::string::String>`
   |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
   |
53 |                             };
   |                              +

warning: unused variable: `dest_mod_file`
   --> src\services\steamcmd.rs:245:22
    |
245 |                  let dest_mod_file = dest_base.join(format!("{}.mod", mod_id)); // ARK requires a .mod file too
    |                      ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_dest_mod_file`

For more information about this error, try `rustc --explain E0597`.
warning: `ark-server-manager` (lib) generated 10 warnings
error: could not compile `ark-server-manager` (lib) due to 1 previous error; 10 warnings emitted
